--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.11",
+    "@prisma/client": "^5.9.1",
+    "@types/uuid": "^9.0.8",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^3.2.0",
+    "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,7 +35,6 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.1",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
