--- a/package.json
+++ b/package.json
@@ -9,24 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.740.0",
+    "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.12",
-    "@mui/material": "^5.15.11",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/lab": "^6.0.0-beta.22",
+    "@mui/material": "^6.4.2",
+    "@mui/x-date-pickers": "^7.4.0",
     "@prisma/client": "^5.9.1",
     "@types/uuid": "^9.0.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
+    "mui-color-input": "^5.0.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^3.2.0",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
