--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.2",
     "@mui/lab": "^6.0.0-beta.22",
     "@mui/material": "^6.4.2",
@@ -26,6 +27,7 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "resend": "^3.2.0",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
